--- a/apps/public/footer.html
+++ b/apps/public/footer.html
@@ -1,12 +1,19 @@
 <div class="footer" id="footer">
 		<p>
 			<a target="_blank"
-				href="https://shang.qq.com/wpa/qunwpa?idkey=820ecd80532576e4e0e4ba4a2d3caf260f0c2272402d07a35dd042c413d296bd"
+				href="/"
 				rel="nofollow">商务合作</a>|<a target="_blank"
-				href="https://shang.qq.com/wpa/qunwpa?idkey=820ecd80532576e4e0e4ba4a2d3caf260f0c2272402d07a35dd042c413d296bd"
+				href="/"
 				rel="nofollow">联系我们</a>|<a target="_blank"
-				href="https://miyu.qq.com/assets/wggj/feedback.html?ADTAG=media.miyu.footer">建议反馈</a>
+				href="/">建议反馈</a>
 		</p>
 		<p class="copyright">Copyright © 2016 - 2017 Tencent. All Rights
 			Reserved.</p>
 	</div>
+	
+	<!-- JiaThis Button BEGIN -->
+<script type="text/javascript" src="http://v3.jiathis.com/code/jiathis_r.js" charset="utf-8"></script>
+<!-- JiaThis Button END -->
+<!-- UJian Button BEGIN -->
+	<script type="text/javascript" src="http://v1.ujian.cc/code/ujian.js?type=slide"></script>
+<!-- UJian Button END -->
