--- a/apps/public/footer.html
+++ b/apps/public/footer.html
@@ -5,7 +5,7 @@
 				rel="nofollow">商务合作</a>|<a target="_blank"
 				href="/"
 				rel="nofollow">联系我们</a>|<a target="_blank"
-				href="/">建议反馈</a>
+				href="/">建议反馈</a>|<script src="https://s22.cnzz.com/z_stat.php?id=1264507923&web_id=1264507923" language="JavaScript"></script>
 		</p>
 		<p class="copyright">Copyright © 2016 - 2017 Tencent. All Rights
 			Reserved.</p>
