--- a/apps/public/header.html
+++ b/apps/public/header.html
@@ -36,7 +36,7 @@
 					</div>
 					<form enctype="application/x-www-form-urlencoded"
 						class="header-search pull-left" method="GET"
-						action="/index.php" id="header-search">
+						action="/search.php"  rel="nofollow" id="header-search">
 						  <input
 							class="header-search-input" id="header-search-input" name="q"
 							placeholder="输入关键字搜索全网内部隐藏优惠券" type="text"> <input
