--- a/apps/public/footer.html
+++ b/apps/public/footer.html
@@ -9,7 +9,8 @@
 		</p>
 		<p class="copyright">Copyright © 2016 - 2017 Tencent. All Rights
 			Reserved.</p>
-	</div>
+	<img src="/public/static/images/shengming.png">	
+</div>
 	
 	<!-- JiaThis Button BEGIN -->
 <script type="text/javascript" src="http://v3.jiathis.com/code/jiathis_r.js" charset="utf-8"></script>
